{
    "name": "InputMaster",
    "maps": [
        {
            "name": "Player",
            "id": "ff87bca8-e8c4-49ce-9b13-7d26a5ec0af0",
            "actions": [
                {
                    "name": "Movement",
                    "type": "Value",
                    "id": "7bd4e809-8bbf-4e2b-8bbc-62620f682624",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Attack",
                    "type": "Button",
                    "id": "50b3a6b1-189d-4bb2-81bf-0cc520674d27",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "SwitchScene",
                    "type": "Button",
                    "id": "b7d5ec80-bab3-4005-bb61-8286c624a8fa",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "02f42cf6-7584-4700-acde-59af34fa3d53",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "74aaf9cf-fef5-4b98-9618-1013128a3e77",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "50fb6d4b-4e42-41d3-99b8-ae2a8c5945fa",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "a9791d10-2c35-4692-9ba7-f4f6488348bb",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "15096fc3-0c95-48da-b479-ec2f46f8d7e8",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "c539afa8-f6c6-4c68-8a47-213e8da98962",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Attack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "038e6d3b-55ef-4f3d-9147-129edab50fa3",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Attack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "eb0af3be-860c-4073-a02d-f43b2cecca70",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SwitchScene",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Cursor",
            "id": "2c751af9-13e6-4f62-afe4-980fae5fab90",
            "actions": [
                {
                    "name": "MousePosition",
                    "type": "Value",
                    "id": "63bf89ce-fbe3-4347-89ff-b33cd5d14ac7",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "04389f64-1145-4cd9-9034-eeb3fdddba07",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MousePosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "PauseMenu",
            "id": "e7f5f572-883a-44e1-a61b-44a47ce78831",
            "actions": [
                {
                    "name": "Invoke",
                    "type": "Button",
                    "id": "f096a90e-a30f-4424-8545-1ccfac05794d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "13ab3650-1bf5-45af-9357-2279969ee0a0",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Invoke",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}